--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,14 +1,15 @@
+
 nav {
   display:flex;
-  height: 100px;
   border-radius: 3px;
   background:#4056A1;
   color:#FFFFFF;
   padding:1.5em;
-  justify-content:space-between;
+  justify-content: space-between;
   width: 100%;
   position: fixed;
-  top:0
+  top:0;
+
  }
 
  span.tweetertitle {  
