--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,15 +1,16 @@
 label {
  border-width: 100%;
+
 }
 
 section {
-  width: 52%;
+  width: 100%;
+  margin-top: 5vw;
 }
 
 form { 
   display: flex;
   flex-direction: column;
-
 }
 
 textarea {
@@ -17,9 +18,9 @@ textarea {
   border-left: unset;
   border-right: unset;
   border-bottom: 5px solid black;
-  background: transparent;
   margin-bottom: 1rem;
   height: 2em;
+  background-color:transparent;
 }
 
 .footer {
@@ -27,6 +28,7 @@ textarea {
   justify-content: space-between;
   font-family: 'Bungee', cursive;
 }
+
 textarea:hover {
   border-color:#4056A1;
 }
