--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,6 +7,7 @@ article {
   font-family:SourceSansPro;
   font-size:0.8em ;
   width: 100%;
+  margin-bottom: 1em;
 }
 
 article:hover {
@@ -27,32 +28,23 @@ visibility: hidden;
   justify-content:space-between;
   align-items:center;
   /* width: 90%; */
-  padding: 0em 5em;
-
-
+  padding-left: 1em;
+  padding-right: 1em;
   margin: auto;
   height:100px;
-  
 }
 .tweet-header .avatar-container {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
 }
-
-
-/* .tweet-header p .handle {
-  display:flex;
-  align-items: flex-end;
-  padding-right: 1rem;
-  visibility: invisible;
-
-} */
 
 #tweet-body {
 width:90%;
 margin: auto;
-
+max-width: 80%;
+border: transparent;
 }
 
 .article-footer {
@@ -66,20 +58,9 @@ margin: auto;
   border-top: 2px solid black;
 }
 
-/* .article-footer {
-fa-flag
-
-} */
-/* <i class="fa fa-flag"></i>
-<i class="fa fa-retweet"></i>
-<i class="fa fa-heart"></i> */
-
 
 .tweet-header .avatar-image {
-  width: 40px;
-  height: 40px;
+  width: 2em;
+  height: 2em;
 }
-/* #tweet-container:hover {
-  visibility: visible;
 
-}  */
